k8s/03-apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-forge
  namespace: rt
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-forge
  template:
    metadata:
      labels:
        app: web-forge
    spec:
      containers:
        - image: thfx31/ynov:forge-v1
          name: nginx
