k8s/03-apps/nginx/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-forge
  namespace: rt
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-forge
